# arc-prize-renegade

./: AGENTS.md  CAPABILITY_CONTRACT.md  CHANGELOG.md  CONCEPTS.md  CONSTITUTION.md  EMERGENCE.md  EPISTEMOLOGY.md  LICENSE  LIFECYCLE.md  LINEAGE.md  MILESTONES.md  NOTICE.md  PRIVACY.md  README.md  pyproject.toml  renegade.py  test_renegade.py
.github/: SECURITY.md  pull_request_template.md
docs/: README.md
docs/architecture/: overview.md
docs/foundations/: EPISTEMOLOGY.md
docs/governance/: CONSTITUTION.md
docs/guides/: synthetic-laboratory-local.md
docs/knowledge/: seed-bank.json
docs/reports/: compositional-search-implementation.md  compositional-search-root-cause.md  constitutional-alignment-review-2026-07-21.md  initial-arc-solver-baseline.md  object-centric-constructive-v1.md  object-reasoning-foundation-v1.md  official-arc-root-cause-00576224.md  official-arc-transfer-baseline.md  pass-10-capability-baseline.md  performance-boundedness-review-2026-07-21.md  synthetic-generator-diversity-repair.md  (+4 more)
tests/: golden_corpus.py  integrity.py  test_archetypes.py  test_characterization.py  test_compositional_search.py  test_core.py  test_diagnostics.py  test_foundation.py  test_generate.py  test_generator.py  test_golden_corpus.py  test_grammar.py  test_invariants.py  test_knowledge.py  test_measurements.py  test_object_programs.py  test_observations.py  test_official_arc.py  test_operations.py  test_percepts.py  test_playground.py  test_public_api.py  test_relationships.py  test_scene.py  test_snapshots.py  test_solver.py  test_stress.py  test_tasks.py
(+48 files in other folders)
