[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-prize-renegade"
version = "0.1.0"
description = "A deterministic symbolic reasoning foundation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ARC Prize Renegade contributors"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.scripts]
renegade = "renegade.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
